--- a/src/componenets/navbar/navbar.scss
+++ b/src/componenets/navbar/navbar.scss
@@ -96,7 +96,7 @@
         a {
           color: white;
           text-decoration: none;
-          font-size: 2rem;
+          font-size: calc(1rem + 1.5vw);
           justify-content: space-evenly;
         }
       }
